Fix suggestededits drawer
Ib123efe6 has changed Drawer behavior to not automatically add/remove
the widget to the body anymore, so we have to do that manually. It
also decoupled Drawer from Overlay, making some of our workarounds
unnecessary.

Also fix a small error with the task type name not showing.

Bug: T242811
(cherry picked from commit 4a03a25c0ef879166c092e49812e55fa2c887ced)

--- a/modules/homepage/suggestededits/ext.growthExperiments.Homepage.SuggestedEdits.less
+++ b/modules/homepage/suggestededits/ext.growthExperiments.Homepage.SuggestedEdits.less
@@ -226,8 +226,12 @@ body.mw-special-Homepage {
 		// Override MobileFrontend, which wants to hide the drawer
 		// on an overlay.
 		display: block !important; // stylelint-disable-line declaration-no-important
+	}
+
+	.drawer-container {
 		// Display over Minerva's overlay content (@z-indexOverOverlay: 4).
 		z-index: 5;
+		position: relative;
 	}
 	// Hide the popup from the button widget,
 	// since the Drawer gets drawn on top of it.
